--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="dist/css/custom_css_1.css" id='wp-emoji-styles-inline-css'>
     <link rel="stylesheet" href="dist/css/custom_css_2.css" id='classic-theme-styles-inline-css'>
     <link rel="stylesheet" href="dist/css/custom_css_3.css" id='global-styles-inline-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_4.css" id='wp-components-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_5.css" id='godaddy-styles-css'>
+    <link rel="stylesheet" href="dist/css/style.min.css" id='wp-components-css'>
+    <link rel="stylesheet" href="dist/css/latest.css" id='godaddy-styles-css'>
 
     <!-- can't offline -->
     <link rel='stylesheet' id='the7-font-css'
@@ -38,9 +38,13 @@
         media='all' />
     <!--  -->
 
-    <link rel="stylesheet" href="dist/css/custom_css_6.css" id='js_composer_front-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_7.css" id='dt-web-fonts-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_8.css" id='dt-main-css'>
+    <link rel="stylesheet" href="dist/css/js_composer.min.css" id='js_composer_front-css'>
+
+    <link rel='stylesheet' id='dt-web-fonts-css'
+		href='https://fonts.googleapis.com/css?family=Roboto:400,600,700%7CPoppins:400,400italic,500,600,700%7CRoboto+Condensed:400,600,700'
+		media='all' />
+        
+    <link rel="stylesheet" href="dist/css/main.min.css" id='dt-main-css'>
 
     <style id='dt-main-inline-css'>
         body #load {
@@ -86,21 +90,20 @@
             --the7-beautiful-spinner-color2: var(--the7-beautiful-spinner-color, #fbb03b);
         }
     </style>
-
-    <link rel="stylesheet" href="dist/css/custom_css_9.css" id='the7-custom-scrollbar-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_10.css" id='the7-wpbakery-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_11.css" id='the7-core-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_12.css" id='the7-css-vars-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_13.css" id='dt-custom-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_14.css" id='dt-media-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_15.css" id='the7-mega-menu-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_16.css" id='the7-elements-albums-portfolio-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_17.css" id='the7-elements-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_18.css" id='style-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_19.css" id='ultimate-vc-addons-style-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_20.css" id='ultimate-vc-addons-headings-style-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_21.css" id='ultimate-vc-addons-animate-css'>
-    <link rel="stylesheet" href="dist/css/custom_css_22.css" id='ultimate-vc-addons-stats-counter-style-css'>
+    <link rel="stylesheet" href="dist/css/custom-scrollbar.min.css" id='the7-custom-scrollbar-css'>
+    <link rel="stylesheet" href="dist/css/wpbakery.min.css" id='the7-wpbakery-css'>
+    <link rel="stylesheet" href="dist/css/post-type.min.css" id='the7-core-css'>
+    <link rel="stylesheet" href="dist/css/css-vars.css" id='the7-css-vars-css'>
+    <link rel="stylesheet" href="dist/css/custom.css" id='dt-custom-css'>
+    <link rel="stylesheet" href="dist/css/media.css" id='dt-media-css'>
+    <link rel="stylesheet" href="dist/css/mega-menu.css" id='the7-mega-menu-css'>
+    <link rel="stylesheet" href="dist/css/the7-elements-albums-portfolio.css" id='the7-elements-albums-portfolio-css'>
+    <link rel="stylesheet" href="dist/css/post-type-dynamic.css" id='the7-elements-css'>
+    <link rel="stylesheet" href="dist/css/style.css" id='style-css'>
+    <link rel="stylesheet" href="dist/css/ultimate-vc-addons-style-css.min.css" id='ultimate-vc-addons-style-css'>
+    <link rel="stylesheet" href="dist/css/headings.min.css" id='ultimate-vc-addons-headings-style-css'>
+    <link rel="stylesheet" href="dist/css/animate.min.css" id='ultimate-vc-addons-animate-css'>
+    <link rel="stylesheet" href="dist/css/stats-counter.min.css" id='ultimate-vc-addons-stats-counter-style-css'>
 
     <!-- for js -->
     <script src="https://easyjaxpm.com/wp-includes/js/jquery/jquery.min.js?ver=3.7.1" id="jquery-core-js"></script>
